changes to multiple of the same type

--- a/tracker.html
+++ b/tracker.html
@@ -414,13 +414,13 @@
             
             <div class="flex items-center gap-4">
                 <select id="currency-selector" class="bg-gray-800 text-white border border-gray-600 rounded px-3 py-2 focus:outline-none shadow-sm">
-                    <option value="INR">🇮🇳 INR (₹)</option>
-                    <option value="USD">🇺🇸 USD ($)</option>
-                    <option value="SGD">🇸🇬 SGD (S$)</option>
+                    <option value="INR">INR (₹)</option>
+                    <option value="USD">USD ($)</option>
+                    <option value="SGD">SGD (S$)</option>
                 </select>
 
                 <button id="refresh-prices-btn" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg text-sm font-medium transition-colors flex items-center gap-2 shadow-lg">
-                    Refresh Prices ⚡
+                    Refresh Prices
                 </button>
                 
                 <div class="relative">
