attempt 2 to add users

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="module">
         // --- CONFIG ---
         // REPLACE THIS WITH YOUR RENDER URL
-        const BACKEND_URL = "https://investing-tracker-xxxx.onrender.com";
+        const BACKEND_URL = "https://investing-tracker.onrender.com";
 
         // --- STATE ---
         let currentUserId = null; 
